--- a/ejerciciosconplantillas/secundaria01.html
+++ b/ejerciciosconplantillas/secundaria01.html
@@ -68,13 +68,13 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="https://www.w3schools.comhttps://www.w3schools.comhttps://www.w3schools.comhttps://www.w3schools.comhttps://www.w3schools.comhttps://www.w3schools.com/w3images/house2.jpg" alt="House" style="width:99%">
+        <img src="https://www.w3schools.com alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="https://www.w3schools.comhttps://www.w3schools.comhttps://www.w3schools.comhttps://www.w3schools.comhttps://www.w3schools.comhttps://www.w3schools.com/w3images/house5.jpg" alt="House" style="width:99%">
+        <img src="https://www.w3schools.com alt="House" style="width:99%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
