--- a/ejerciciosconplantillas/index02.html
+++ b/ejerciciosconplantillas/index02.html
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('/ejerciciosconplantillas/imagenes/Benidorm.jpg');
+  background-image: url('ejerciciosconplantillas/imagenes/Benidorm.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
@@ -23,17 +23,17 @@ body, html {height: 100%}
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
     Logo
   </div>
-  <div class="w3-display-topleft">
+  <div class="w3-display-topright">
     <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center">35 days left</p>
   </div>
-    <div class="w3-display-middle">
+   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center">35 days left</p>
   </div>
-    <div class="w3-display-bottomright">
+   <div class="w3-display-bottomright">
     <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center">35 days left</p>
