--- a/Viajeperfecto/Maldivas.html
+++ b/Viajeperfecto/Maldivas.html
@@ -66,6 +66,8 @@
     #principal {
       background: #e0f7fa;
       color: #004d40;
+      img https://veronika77299.github.io/veronika77299/Viajeperfecto/maldivasprincipal
+      
     }
     #cultura {
       background: #fff3e0;
