--- a/Viajeperfecto/Maldivas.html
+++ b/Viajeperfecto/Maldivas.html
@@ -72,6 +72,7 @@
     #cultura {
       background: #fff3e0;
       color: #5d4037;
+      img https://veronika77299.github.io/veronika77299/Viajeperfecto/culturamaldivas
     }
     #turismo {
       background: #e3f2fd;
