--- a/Viajeperfecto/Maldivas.html
+++ b/Viajeperfecto/Maldivas.html
@@ -81,6 +81,7 @@
     #gastronomia {
       background: #f3e5f5;
       color: #6a1b9a;
+      img https://veronika77299.github.io/veronika77299/Viajeperfecto/maldivasgastronomia
     }
   </style>
 </head>
