--- a/Viajeperfecto/Maldivas.html
+++ b/Viajeperfecto/Maldivas.html
@@ -77,6 +77,7 @@
     #turismo {
       background: #e3f2fd;
       color: #0d47a1;
+      img https://veronika77299.github.io/veronika77299/Viajeperfecto/turismomaldivas
     }
     #gastronomia {
       background: #f3e5f5;
