--- a/Viajeperfecto/gastronomía.html
+++ b/Viajeperfecto/gastronomía.html
@@ -1,1 +1,83 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Página Secundaria</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+    header {
+      background-color: #4CAF50;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    nav {
+      background-color: #333;
+      overflow: hidden;
+    }
+    nav a {
+      float: left;
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+    nav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+    main {
+      padding: 2rem;
+      background-color: white;
+      margin: 2rem auto;
+      max-width: 800px;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    main img {
+      max-width: 100%;
+      border-radius: 8px;
+      margin-bottom: 1rem;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: #eee;
+      font-size: 0.9rem;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Página Secundaria</h1>
+  </header>
+
+  <nav>
+    <a href="index.html">Página principal</a>
+    <a href="#">Gastronomía</a>
+    <a href="#">Cultura</a>
+    <a href="#">Turismo</a>
+  </nav>
+
+  <main>
+    <h2>Bienvenido a la página de gastronomia de Maldivas</h2>
+    <img src="https://via.placeholder.com/800x300" alt="Imagen representativa">
+    <p>Este es un ejemplo de cómo puede lucir una página secundaria más completa y representativa. Aquí puedes incluir descripciones más detalladas, imágenes o videos para hacerla más atractiva y funcional.</p>
+    <p>Además, puedes añadir más secciones, enlaces o incluso formularios de contacto, dependiendo de lo que necesites para tu sitio web.</p>
+  </main>
+
+  <footer>
+    &copy; 2025 Mi Sitio Web. Todos los derechos reservados.
+  </footer>
+
+</body>
+</html>
 
