--- a/Viajeperfecto/gastronomía.html
+++ b/Viajeperfecto/gastronomía.html
@@ -69,9 +69,9 @@
 
   <main>
     <h2>Bienvenido a la página de gastronomia de Maldivas</h2>
-    <img src="https://via.placeholder.com/800x300" alt="Imagen representativa">
-    <p>Este es un ejemplo de cómo puede lucir una página secundaria más completa y representativa. Aquí puedes incluir descripciones más detalladas, imágenes o videos para hacerla más atractiva y funcional.</p>
-    <p>Además, puedes añadir más secciones, enlaces o incluso formularios de contacto, dependiendo de lo que necesites para tu sitio web.</p>
+    <img src="https://veronika77299.github.io/veronika77299/Viajeperfecto/maldivasgastronomia">
+    <p>La cocina de Maldivas se enfoca en el pescado, sobre todo en el atún, que se presenta fresco o seco en recetas como "garudhiya" que es sopa de pescado y el más huni es un desayuno tradicional que incluye: atún, coco y un pan llamado "roshi" Los "currys" y la leche de coco son abundantes ya que equilibran los sabores intensos y fragantes.</p>
+    <p>Además,Los bocados, llamados "hedhikaa", incluyen empanadas y bonitas de pescado. Elementos de las cocninas de India, Sri Lanka y del mundo árabe aportan diversidad a esta gastronomía insular, donde los postres sencillos y las frutas tropicales completan a la oferta culinaria..</p>
   </main>
 
   <footer>
