--- a/Viajeperfecto/cultura.html
+++ b/Viajeperfecto/cultura.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Página Secundaria</title>
+  <title>Cultura</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -69,7 +69,7 @@
 
   <main>
     <h2>Bienvenido a la página de cultura de Maldivas</h2>
-    <img src="https://veronika77299.github.io/veronika77299/Viajeperfecto/maldivasgastronomia">
+    <img src="https://veronika77299.github.io/veronika77299/Viajeperfecto/culturamaldivas">
     <p>Este sitio perfecto que está ubicado en el hemisferio norte, cerca del ecuador, tiene una cultura preciosa y rica que ha sido moldeada por diversas areas a lo largo de los años. Su música folclórica "bodhu beru", su artesanía por ejemplo los "dhonis" y la acogedora hospitalidad de sus habitantes son muy notable</p>
     <p>Asimismo, las costumbres religiosas y los vibrantes festivales muestran la forma en que la cultura y el entorno natural coexisten de manera equilibrada.</p>
   </main>
