--- a/Viajeperfecto/turismo.html
+++ b/Viajeperfecto/turismo.html
@@ -1,1 +1,82 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Turismo</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+    header {
+      background-color: #4CAF50;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    nav {
+      background-color: #333;
+      overflow: hidden;
+    }
+    nav a {
+      float: left;
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+    nav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+    main {
+      padding: 2rem;
+      background-color: white;
+      margin: 2rem auto;
+      max-width: 800px;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    main img {
+      max-width: 100%;
+      border-radius: 8px;
+      margin-bottom: 1rem;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: #eee;
+      font-size: 0.9rem;
+    }
+  </style>
+</head>
+<body>
 
+  <header>
+    <h1>Página Secundaria</h1>
+  </header>
+
+  <nav>
+    <a href="index.html">Página principal</a>
+    <a href="#">Gastronomía</a>
+    <a href="#">Cultura</a>
+    <a href="#">Turismo</a>
+  </nav>
+
+  <main>
+    <h2>Bienvenido a la página de turismo de Maldivas</h2>
+    <img src="https://veronika77299.github.io/veronika77299/Viajeperfecto/culturamaldivas">
+    <p>Las Maldivas representan un símbolo de opulencia y belleza natural sin igual. Sus aguas de color turquesa, sus playas de arena blanca y sus vibrantes arrecifes de coral crean un entorno ideal tanto para relajarse como para vivir aventuras. Desde disfrutar de villas flotantes en el océano hasta descubrir la rica diversidad de la vida marina mediante "snorkel" o buceo, cada instante en las Maldivas se asemeja a una foto viviente. </p>
+    <p>La atención y el servicio excepcional que se ofrecen en sus resorts, junto con actividades como paseos en "dhoni", pesca nocturna y tratamientos de spa, hacen de este lugar el destino perfecto para quienes desean una experiencia exclusiva y estar en contacto cercano con la naturaleza.</p>
+  </main>
+
+  <footer>
+    &copy; 2025 Mi Sitio Web. Todos los derechos reservados.
+  </footer>
+
+</body>
+</html>
