--- a/Viajeperfecto/turismo.html
+++ b/Viajeperfecto/turismo.html
@@ -13,7 +13,7 @@
     }
     header {
       background-color: #4CAF50;
-      color: white;
+      color: black;
       padding: 1rem;
       text-align: center;
     }
@@ -24,7 +24,7 @@
     nav a {
       float: left;
       display: block;
-      color: white;
+      color: black;
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
