--- a/Viajeperfecto/Maldivas.html
+++ b/Viajeperfecto/Maldivas.html
@@ -29,7 +29,8 @@ body, html {height: 100%}
     <p class="w3-large w3-center">El viaje perfecto</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-   Gastronomía <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+   Gastronomía <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/gastronom%C3%ADa.html">w3.css</a> 
+    Cultura  <a href=""</a> 
   </div>
 </div>
 
