--- a/Viajeperfecto/Maldivas.html
+++ b/Viajeperfecto/Maldivas.html
@@ -31,7 +31,7 @@ body, html {height: 100%}
   <div class="w3-display-bottomleft w3-padding-large">
    Gastronomía, <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/gastronom%C3%ADa.html">w3.css</a> 
     Cultura,  <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/cultura.html"</a> 
-      Turismo  <a href=" "</a>
+      Turismo  <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/turismo.html"</a>
   </div>
 </div>
 
