--- a/Viajeperfecto/Maldivas.html
+++ b/Viajeperfecto/Maldivas.html
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('/https://veronika77299.github.io/veronika77299/Viajeperfecto/maldivasprincipal');
+  background-image: url('https://veronika77299.github.io/veronika77299/Viajeperfecto/maldivasprincipal');
   min-height: 100%;
   background-position: center;
   background-size: cover;
