--- a/Viajeperfecto/cultura.html
+++ b/Viajeperfecto/cultura.html
@@ -13,7 +13,7 @@
     }
     header {
       background-color: #4CAF50;
-      color: black;
+      color: white;
       padding: 1rem;
       text-align: center;
     }
@@ -24,18 +24,18 @@
     nav a {
       float: left;
       display: block;
-      color: black;
+      color: white;
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
     }
     nav a:hover {
       background-color: #ddd;
-      color: black;
+      color: white;
     }
     main {
       padding: 2rem;
-      background-color: black;
+      background-color: white;
       margin: 2rem auto;
       max-width: 800px;
       border-radius: 8px;
