--- a/Viajeperfecto/cultura.html
+++ b/Viajeperfecto/cultura.html
@@ -61,8 +61,8 @@
   </header>
 
   <nav>
-    <a href="index.html">Página principal</a>
-    <a href="#">Gastronomía</a>
+    Página principal<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/Maldivas.html">Página principal</a>
+    Gastronomía<a href="#">Gastronomía</a>
     <a href="#">Cultura</a>
     <a href="#">Turismo</a>
   </nav>
