--- a/Viajeperfecto/cultura.html
+++ b/Viajeperfecto/cultura.html
@@ -63,8 +63,8 @@
   <nav>
     Página principal<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/Maldivas.html">Página principal</a>
     Gastronomía<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/gastronom%C3%ADa.html">Gastronomía</a>
-    Cultura<a href="#">Cultura</a>
-    Turismo<a href="#">Turismo</a>
+    Cultura<a href="">Cultura</a>
+    Turismo<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/turismo.html">Turismo</a>
   </nav>
 
   <main>
