--- a/Viajeperfecto/gastronomía.html
+++ b/Viajeperfecto/gastronomía.html
@@ -63,8 +63,8 @@
   <nav>
     <a href="index.html">Página principal</a>
     <a href="#">Gastronomía</a>
-    <a href="#">Cultura</a>
-    <a href="#">Turismo</a>
+    <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/cultura.html"Cultura</a>
+    <a href="">Turismo</a>
   </nav>
 
   <main>
