--- a/Viajeperfecto/turismo.html
+++ b/Viajeperfecto/turismo.html
@@ -61,11 +61,12 @@
   </header>
 
   <nav>
-    <a href="index.html">Página principal</a>
-    <a href="#">Gastronomía</a>
-    <a href="#">Cultura</a>
-    <a href="#">Turismo</a>
+    Página principal<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/Maldivas.html">Página principal</a>
+    Gastronomía<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/gastronom%C3%ADa.html">Gastronomía</a>
+    Cultura<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/cultura.html">Cultura</a>
+    Turismo<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/turismo.html">Turismo</a>
   </nav>
+
 
   <main>
     <h2>Bienvenido a la página de turismo de Maldivas</h2>
