--- a/Viajeperfecto/turismo.html
+++ b/Viajeperfecto/turismo.html
@@ -24,7 +24,7 @@
     nav a {
       float: left;
       display: block;
-      color: black;
+      color: white;
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
