--- a/Viajeperfecto/Maldivas.html
+++ b/Viajeperfecto/Maldivas.html
@@ -21,7 +21,9 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Empresa:VB
+    Empresa:VB 
+    Para el público
+    Del 15-99+
   </div>
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">Maldivas</h1>
