--- a/Viajeperfecto/cultura.html
+++ b/Viajeperfecto/cultura.html
@@ -62,9 +62,9 @@
 
   <nav>
     Página principal<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/Maldivas.html">Página principal</a>
-    Gastronomía<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/gastronom%C3%ADa.html">Gastronomía</a>
-    Cultura<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/cultura.html">Cultura</a>
-    Turismo<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/turismo.html">Turismo</a>
+    Plantilla:Gastronomía<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/gastronom%C3%ADa.html"> Plantilla: Gastronomía</a>
+    Plantilla: Cultura<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/cultura.html"> Plantilla: Cultura</a>
+    Plantilla: Turismo<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/turismo.html">Plantilla: Turismo</a>
   </nav>
 
   <main>
