--- a/Viajeperfecto/cultura.html
+++ b/Viajeperfecto/cultura.html
@@ -61,10 +61,9 @@
   </header>
 
   <nav>
-    Página principal<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/Maldivas.html">Página principal</a>
-    Plantilla:jjjGastronomía<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/gastronom%C3%ADa.html"> Plantilla: Gastronomía</a>
-    Plantilla: jjjCultura<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/cultura.html"> Plantilla: Cultura</a>
-    Plantilla: jjjTurismo<a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/turismo.html">Plantilla: Turismo</a>
+    Plantilla: jjjGastronomía, <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/gastronom%C3%ADa.html"> Plantilla: Gastronomía</a> 
+  Plantilla: jjjCultura,  <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/cultura.html"> Plantilla: Cultura</a> 
+      Plantilla: jjjTurismo  <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/turismo.html">Plantilla: Turismo</a>
   </nav>
 
   <main>
