--- a/Viajeperfecto/Maldivas.html
+++ b/Viajeperfecto/Maldivas.html
@@ -30,9 +30,9 @@ body, html {height: 100%}
     <p class="w3-large w3-center">El viaje perfecto</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-  Plantilla: jjjGastronomía, <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/gastronom%C3%ADa.html"> Plantilla: Gastronomía</a> 
-  Plantilla: jjjCultura,  <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/cultura.html"> Plantilla: Cultura</a> 
-      Plantilla: jjjTurismo  <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/turismo.html">Plantilla: Turismo</a>
+  Plantilla: Gastronomía, <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/gastronom%C3%ADa.html"> Plantilla: jjjGastronomía</a> 
+  Plantilla: Cultura,  <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/cultura.html"> Plantilla: jjjCultura</a> 
+      Plantilla: Turismo  <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/turismo.html">Plantilla: jjjTurismo</a>
   </div>
 </div>
 
