--- a/Viajeperfecto/cultura.html
+++ b/Viajeperfecto/cultura.html
@@ -61,9 +61,9 @@
   </header>
 
   <nav>
-    Plantilla: jjjGastronomía, <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/gastronom%C3%ADa.html"> Plantilla: Gastronomía</a> 
-  Plantilla: jjjCultura,  <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/cultura.html"> Plantilla: Cultura</a> 
-      Plantilla: jjjTurismo  <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/turismo.html">Plantilla: Turismo</a>
+    Plantilla: Gastronomía, <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/gastronom%C3%ADa.html"> Plantilla: jjjGastronomía</a> 
+  Plantilla: Cultura,  <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/cultura.html"> Plantilla: jjjCultura</a> 
+      Plantilla: Turismo  <a href="https://veronika77299.github.io/veronika77299/Viajeperfecto/turismo.html">Plantilla: jjjTurismo</a>
   </nav>
 
   <main>
